--- a/services/ui/src/app.html
+++ b/services/ui/src/app.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%svelte.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    %svelte.head%
+    %sveltekit.head%
   </head>
   <body>
-    <div id="root">%svelte.body%</div>
+    <div id="root">%sveltekit.body%</div>
   </body>
 </html>
