Add a web component for scalar diagnostics displays
Stub a web component for displaying the diagnostics for a scalar
variable. This is just to test that the dev environment is working and
to start experimenting with how we can make good use of web components.
So far it's looking promising.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -12,5 +12,10 @@
     >
       <strong><span>Unified Graphics</span></strong>
     </header>
+    <main>
+      <ug-scalardiag>
+        <h2 slot="title">Temperature</h2>
+      </ug-scalardiag>
+    </main>
   </body>
 </html>
