Fetch diag data using an observed src attribute
Configure an observed attribute called `src` on the ScalarDiag component
that lets us set the endpoint from which the diag data is fetched. Once
the request returns, we set the summary statistics in the interface.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -13,7 +13,7 @@
       <strong><span>Unified Graphics</span></strong>
     </header>
     <main>
-      <ug-scalardiag>
+      <ug-scalardiag src="/api/diag/temperature/">
         <h2 slot="title">Temperature</h2>
       </ug-scalardiag>
     </main>
