Show sections for first and third loops in diag displays
Refactored the ScalarDiag component into two components:
ScalarVariableDiag and ScalarLoopDiag (I don't love these names). The
variable diag is the container that handles fetching the data; the loop
diag displays the data for a single loop during assimilation.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -13,9 +13,9 @@
       <strong><span>Unified Graphics</span></strong>
     </header>
     <main>
-      <ug-scalardiag src="/api/diag/temperature/">
+      <ug-diag-scalarvariable src="/api/diag/temperature/">
         <h2 slot="title">Temperature</h2>
-      </ug-scalardiag>
+      </ug-diag-scalarvariable>
     </main>
   </body>
 </html>
