--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -16,6 +16,9 @@
       <ug-diag-scalarvariable src="/api/diag/temperature/">
         <h2 slot="title">Temperature</h2>
       </ug-diag-scalarvariable>
+      <diag-vectormap>
+        <h2 slot="title">Wind</h2>
+      </diag-vectormap>
     </main>
   </body>
 </html>
