--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -7,18 +7,20 @@
     <script type="module" src="/js/main.js"></script>
   </head>
   <body>
-    <header
-      class="usa-dark-background display-flex flex-justify-center padding-y-2 padding-x-3"
-    >
-      <strong><span>Unified Graphics</span></strong>
-    </header>
-    <main>
-      <ug-diag-scalarvariable src="/api/diag/temperature/">
-        <h2 slot="title">Temperature</h2>
-      </ug-diag-scalarvariable>
-      <diag-vectormap>
-        <h2 slot="title">Wind</h2>
-      </diag-vectormap>
-    </main>
+    <div id="root">
+      <header
+        class="usa-dark-background display-flex flex-justify-center padding-y-2 padding-x-3"
+      >
+        <strong><span>Unified Graphics</span></strong>
+      </header>
+      <main>
+        <ug-diag-scalarvariable src="/api/diag/temperature/">
+          <h2 slot="title">Temperature</h2>
+        </ug-diag-scalarvariable>
+        <diag-vectormap src="/api/diag/wind/">
+          <h2 slot="title">Wind</h2>
+        </diag-vectormap>
+      </main>
+    </div>
   </body>
 </html>
