Replace the SVG with a canvas for the map
If we're plotting all of the observations, an SVG is not performant;
there are too many DOM elements. So we'll use a canvas instead.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -17,7 +17,7 @@
         <ug-diag-scalarvariable src="/api/diag/temperature/">
           <h2 slot="title">Temperature</h2>
         </ug-diag-scalarvariable>
-        <diag-vectormap src="/api/diag/wind/">
+        <diag-vectormap>
           <h2 slot="title">Wind</h2>
         </diag-vectormap>
       </main>
