--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -19,6 +19,7 @@
         </ug-diag-scalarvariable>
         <diag-vectormap>
           <h2 slot="title">Wind (Guess)</h2>
+          <data-source id="border" src="/geo/borders.json" />
           <data-source id="observation" src="/api/diag/wind/ges/observation/" />
           <data-source id="forecast" src="/api/diag/wind/ges/forecast/" />
         </diag-vectormap>
