Refactor the diag display for scalar variables
I've simplified the diagnostics display for scalar variables to just
display a single histogram. I'll need to find a way to set a shared
y-axis, or I may just display two histograms inside the component after
all.

I moved the histogram code into a helper that follows the same pattern
used by d3 for axes. So you can create a histogram in any SVG simply by
assigning data to it with `selection.datum()` and then using
`selection.call(histogram)` to build the histogram with axes. I'd like
to add some markers for mean and standard deviation, and possibly a rug
plot below the x-axis.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -14,15 +14,20 @@
         <strong><span>Unified Graphics</span></strong>
       </header>
       <main>
-        <ug-diag-scalarvariable src="/api/diag/temperature/">
-          <h2 slot="title">Temperature</h2>
-        </ug-diag-scalarvariable>
-        <diag-vectormap>
+        <diag-scalar src="/api/diag/temperature/ges/">
+          <h2 slot="title">Temperature (Guess)</h2>
+        </diag-scalar>
+
+        <diag-scalar src="/api/diag/temperature/anl/">
+          <h2 slot="title">Temperature (Analysis)</h2>
+        </diag-scalar>
+
+        <!-- <diag-vectormap>
           <h2 slot="title">Wind (Guess)</h2>
           <data-source id="border" src="/geo/borders.json" />
           <data-source id="observation" src="/api/diag/wind/ges/observation/" />
           <data-source id="forecast" src="/api/diag/wind/ges/forecast/" />
-        </diag-vectormap>
+        </diag-vectormap> -->
       </main>
     </div>
   </body>
