Convert the histogram to a web component
I think the charts are good candidates for web components with shadow
DOM to contain the chart. This way they behave more like a replaced
element such as an <img> where you set the src data and get an image
back.

I also decided to change the DiagScalar component to use light DOM and
manage both minimization loops so that it's easier to sync their axes.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -14,12 +14,8 @@
         <strong><span>Unified Graphics</span></strong>
       </header>
       <main>
-        <diag-scalar src="/api/diag/temperature/ges/">
-          <h2 slot="title">Temperature (Guess)</h2>
-        </diag-scalar>
-
-        <diag-scalar src="/api/diag/temperature/anl/">
-          <h2 slot="title">Temperature (Analysis)</h2>
+        <diag-scalar src="/api/diag/temperature/">
+          <h2>Temperature</h2>
         </diag-scalar>
 
         <!-- <diag-vectormap>
