Restore the map to the app
Now that I'm done tinkering with the histograms for the temperature
display, I can restore the vector map because it won't slow down
development as much.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -18,12 +18,12 @@
           <h2>Temperature</h2>
         </diag-scalar>
 
-        <!-- <diag-vectormap>
+        <diag-vectormap>
           <h2 slot="title">Wind (Guess)</h2>
           <data-source id="border" src="/geo/borders.json" />
           <data-source id="observation" src="/api/diag/wind/ges/observation/" />
           <data-source id="forecast" src="/api/diag/wind/ges/forecast/" />
-        </diag-vectormap> -->
+        </diag-vectormap>
       </main>
     </div>
   </body>
