Project the wind map with an Albers projection
I replaced the ridiculous linear scale with an Albers projection. I've
dropped the direction lines from the map for now because they weren't
that useful and they're harder to do with this projection. If they were
more valuable, I'd use an equirectangular projection, but I think they
need to be thought through a little more.

--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -20,9 +20,8 @@
 
         <diag-vectormap>
           <h2 slot="title">Wind (Guess)</h2>
-          <data-source id="border" src="/geo/borders.json" />
-          <data-source id="observation" src="/api/diag/wind/ges/observation/" />
-          <data-source id="forecast" src="/api/diag/wind/ges/forecast/" />
+          <data-source id="borders" src="/geo/borders.json" />
+          <data-source id="observations" src="/api/diag/wind/" />
         </diag-vectormap>
       </main>
     </div>
