--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -6,24 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" src="/js/main.js"></script>
   </head>
-  <body>
-    <div id="root">
-      <header
-        class="usa-dark-background display-flex flex-justify-center padding-y-2 padding-x-3"
-      >
-        <strong><span>Unified Graphics</span></strong>
-      </header>
-      <main>
-        <diag-scalar src="/api/diag/temperature/">
-          <h2>Temperature</h2>
-        </diag-scalar>
-
-        <diag-vectormap>
-          <h2 slot="title">Wind (Guess)</h2>
-          <data-source id="borders" src="/geo/borders.json" />
-          <data-source id="observations" src="/api/diag/wind/" />
-        </diag-vectormap>
-      </main>
-    </div>
-  </body>
+  <body></body>
 </html>
