--- a/services/ui/src/index.html
+++ b/services/ui/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/styles/index.scss" />
     <script type="module" src="/js/main.js"></script>
   </head>
   <body></body>
